# student-analytics

./: .env.example  .gitignore  README.md  docker-compose.yml  fly.toml  vercel.json
.github/workflows/: backend.yml  deploy.yml  frontend.yml
backend/: .env.example  Dockerfile  Dockerfile.prod  docker-entrypoint.sh  pyproject.toml
backend/app/: main.py  state.py
backend/app/api/: admin.py  auth.py  enrollment.py  gpa.py  meta.py  retention.py  students.py
backend/app/auth/: dependencies.py  jwt.py  models.py
backend/app/core/: config.py  database.py  logging.py  telemetry.py
backend/app/etl/: extract.py  load.py  quality.py  run.py  transform.py
backend/app/middleware/: request_id.py
backend/app/models/: enrollment.py  gpa.py  retention.py  student.py
backend/app/repositories/: enrollment.py  gpa.py  retention.py
backend/app/services/: enrollment.py  gpa.py  retention.py
backend/app/sql/models/: int_student_term.sql  mart_enrollment_by_college.sql  mart_gpa_distribution.sql  mart_retention_by_classification.sql  star_schema.sql  stg_students.sql
backend/scripts/: export_openapi.py
backend/tests/: conftest.py
backend/tests/integration/: test_health.py  test_routes_enrollment.py  test_routes_gpa.py  test_routes_retention.py
backend/tests/unit/: test_services_enrollment.py  test_services_gpa.py  test_services_retention.py
data/: generate_synthetic.py
docs/: erd.md  performance.md  security.md
docs/adr/: 0001-duckdb-over-postgres.md  0002-polars-over-pandas.md  0003-sql-layered-models.md  0004-no-redux.md  0005-recharts-over-d3.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/: App.module.css  App.tsx  index.css  main.tsx
frontend/src/api/: hooks.ts  types.ts
frontend/src/components/: Chart.module.css  EnrollmentChart.tsx  ErrorBoundary.module.css  ErrorBoundary.tsx  FilterBar.module.css  FilterBar.tsx  GpaChart.tsx  RetentionChart.tsx  Skeleton.tsx  StudentTable.module.css  StudentTable.tsx
frontend/src/pages/: Dashboard.module.css  Dashboard.tsx  Students.module.css  Students.tsx
frontend/src/stories/: EnrollmentChart.stories.tsx  GpaChart.stories.tsx  RetentionChart.stories.tsx
frontend/tests/: EnrollmentChart.test.tsx  GpaChart.test.tsx  RetentionChart.test.tsx  a11y.test.tsx  setup.ts
