[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "student-analytics-backend"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "polars>=0.20.0",
    "python-dotenv>=1.0.0",
    "duckdb>=1.0.0",
    "pydantic-settings>=2.3.0",
    "cachetools>=5.3.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "types-cachetools>=5.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "T20", "PT"]
ignore = [
    "T201",   # allow print() in ETL scripts
    "PT004",  # fixtures without return value
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["duckdb.*"]
ignore_missing_imports = true
